ICU-8854 Inefficient use of number constructors. Use valueOf instead.
X-SVN-Rev: 30836