@@ -748,7 +748,7 @@ final class NFRule {
         if (pp.getIndex() == 0 && sub1.getPos() != 0) {
             // commented out because ParsePosition doesn't have error index in 1.1.x
             //                parsePosition.setErrorIndex(pp.getErrorIndex());
-            return new Long(0);
+            return Long.valueOf(0);
         }
 
         // this is the fun part.  The basic guts of the rule-matching
@@ -993,7 +993,7 @@ final class NFRule {
             // if we make it here, this was an unsuccessful match, and we
             // leave pp unchanged and return 0
             pp.setIndex(0);
-            return new Long(0);
+            return Long.valueOf(0);
 
             // if "delimiter" is empty, or consists only of ignorable characters
             // (i.e., is semantically empty), thwe we obviously can't search
